Fix header, when the menu items do not fit

--- a/src/blocks/common.blocks/header/header.ie.styl
+++ b/src/blocks/common.blocks/header/header.ie.styl
@@ -2,8 +2,8 @@
 {
     & > *
     {
-        display: table-cell;
+        display: table-cell
 
-        vertical-align: middle;
+        vertical-align: middle
     }
 }
